--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@syncfusion/ej2-react-dropdowns": "^20.1.52",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -15,8 +18,11 @@
     "react-bootstrap": "^2.2.0",
     "react-bootstrap-datetimepicker": "0.0.22",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.1",
+    "reactjs-dropdown-component": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
