--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.1",
+    "react-tabs": "^5.1.0",
     "reactjs-dropdown-component": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
