--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-bootstrap-datetimepicker": "0.0.22",
+    "react-datepicker": "^4.8.0",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.10.0",
     "react-router-dom": "^5.2.0",
